Add `keywords` attribute to bookmark.

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -22,135 +22,168 @@
   const bookmarks = {
     "ChatGPT": {
       "url": "https://chat.openai.com/chat",
-      "tags": ["🧰 Tools"]
+      "tags": ["🧰 Tools"],
+      "keywords": []
     },
     "Twitter": {
       "url": "https://mobile.twitter.com/home",
-      "tags": ["🧑 SNS"]
+      "tags": ["🧑 SNS"],
+      "keywords": []
     },
     "GitHub": {
       "url": "https://github.com/",
-      "tags": ["👨‍💻 Development", "📦 Tools"]
+      "tags": ["👨‍💻 Development", "📦 Tools"],
+      "keywords": []
     },
     "Google": {
       "url": "https://www.google.com/",
-      "tags": ["🔍 Search", "🌍 Web"]
+      "tags": ["🔍 Search", "🌍 Web"],
+      "keywords": []
     },
     "Wikipedia": {
       "url": "https://www.wikipedia.org/",
-      "tags": ["📚 Reference", "🌍 Web"]
+      "tags": ["📚 Reference", "🌍 Web"],
+      "keywords": []
     },
     "YouTube": {
       "url": "https://www.youtube.com/",
-      "tags": ["📹 Video", "🎬 Entertainment"]
+      "tags": ["📹 Video", "🎬 Entertainment"],
+      "keywords": []
     },
     "Reddit": {
       "url": "https://www.reddit.com/",
-      "tags": ["🗣️ Discussion", "🧑 SNS"]
+      "tags": ["🗣️ Discussion", "🧑 SNS"],
+      "keywords": []
     },
     "Amazon": {
       "url": "https://www.amazon.com/",
-      "tags": ["🛍️ Shopping", "📦 Tools"]
+      "tags": ["🛍️ Shopping", "📦 Tools"],
+      "keywords": []
     },
     "LinkedIn": {
       "url": "https://www.linkedin.com/",
-      "tags": ["👨‍💼 Professional", "🧑 SNS"]
+      "tags": ["👨‍💼 Professional", "🧑 SNS"],
+      "keywords": []
     },
     "Netflix": {
       "url": "https://www.netflix.com/",
-      "tags": ["🎥 Streaming", "🎬 Entertainment"]
+      "tags": ["🎥 Streaming", "🎬 Entertainment"],
+      "keywords": []
     },
     "Dropbox": {
       "url": "https://www.dropbox.com/",
-      "tags": ["💾 Storage", "📦 Tools"]
+      "tags": ["💾 Storage", "📦 Tools"],
+      "keywords": []
     },
     "Netflix": {
       "url": "https://www.netflix.com/",
-      "tags": ["🎥 Streaming", "🎬 Entertainment"]
+      "tags": ["🎥 Streaming", "🎬 Entertainment"],
+      "keywords": []
     },
     "Pinterest": {
       "url": "https://www.pinterest.com/",
-      "tags": ["📌 Inspiration", "🧑 SNS"]
+      "tags": ["📌 Inspiration", "🧑 SNS"],
+      "keywords": []
     },
     "Slack": {
       "url": "https://slack.com/",
-      "tags": ["💬 Communication", "👨‍💼 Professional"]
+      "tags": ["💬 Communication", "👨‍💼 Professional"],
+      "keywords": []
     },
     "Twitch": {
       "url": "https://www.twitch.tv/",
-      "tags": ["🎮 Gaming", "🎬 Entertainment"]
+      "tags": ["🎮 Gaming", "🎬 Entertainment"],
+      "keywords": []
     },
     "Zoom": {
       "url": "https://zoom.us/",
-      "tags": ["👥 Meetings", "👨‍💼 Professional"]
+      "tags": ["👥 Meetings", "👨‍💼 Professional"],
+      "keywords": []
     },
     "Discord": {
       "url": "https://discord.com/",
-      "tags": ["💬 Communication", "🎮 Gaming"]
+      "tags": ["💬 Communication", "🎮 Gaming"],
+      "keywords": []
     },
     "Google Drive": {
       "url": "https://www.google.com/drive/",
-      "tags": ["💾 Storage", "📦 Tools"]
+      "tags": ["💾 Storage", "📦 Tools"],
+      "keywords": []
     },
     "Hulu": {
       "url": "https://www.hulu.com/",
-      "tags": ["🎥 Streaming", "🎬 Entertainment"]
+      "tags": ["🎥 Streaming", "🎬 Entertainment"],
+      "keywords": []
     },
     "Instagram": {
       "url": "https://www.instagram.com/",
-      "tags": ["📷 Photos", "🧑 SNS"]
+      "tags": ["📷 Photos", "🧑 SNS"],
+      "keywords": []
     },
     "Notion": {
       "url": "https://www.notion.so/",
-      "tags": ["📝 Productivity", "📦 Tools"]
+      "tags": ["📝 Productivity", "📦 Tools"],
+      "keywords": []
     },
     "Spotify": {
       "url": "https://www.spotify.com/",
-      "tags": ["🎧 Music", "🎬 Entertainment"]
+      "tags": ["🎧 Music", "🎬 Entertainment"],
+      "keywords": []
     },
     "TikTok": {
       "url": "https://www.tiktok.com/",
-      "tags": ["📹 Short-form Video", "🧑 SNS"]
+      "tags": ["📹 Short-form Video", "🧑 SNS"],
+      "keywords": []
     },
     "Discord": {
       "url": "https://discord.com/",
-      "tags": ["💬 Communication", "🎮 Gaming"]
+      "tags": ["💬 Communication", "🎮 Gaming"],
+      "keywords": []
     },
     "Goodreads": {
       "url": "https://www.goodreads.com/",
-      "tags": ["📚 Books", "📝 Productivity"]
+      "tags": ["📚 Books", "📝 Productivity"],
+      "keywords": []
     },
     "Last.fm": {
       "url": "https://www.last.fm/",
-      "tags": ["🎧 Music", "📊 Statistics"]
+      "tags": ["🎧 Music", "📊 Statistics"],
+      "keywords": []
     },
     "Letterboxd": {
       "url": "https://letterboxd.com/",
-      "tags": ["🎥 Movies", "📊 Statistics"]
+      "tags": ["🎥 Movies", "📊 Statistics"],
+      "keywords": []
     },
     "Meetup": {
       "url": "https://www.meetup.com/",
-      "tags": ["👥 Community", "👨‍💼 Professional"]
+      "tags": ["👥 Community", "👨‍💼 Professional"],
+      "keywords": []
     },
     "New York Times": {
       "url": "https://www.nytimes.com/",
-      "tags": ["📰 News", "📊 Statistics"]
+      "tags": ["📰 News", "📊 Statistics"],
+      "keywords": []
     },
     "Replit": {
       "url": "https://replit.com/",
-      "tags": ["💻 Programming", "📦 Tools"]
+      "tags": ["💻 Programming", "📦 Tools"],
+      "keywords": []
     },
     "SoundCloud": {
       "url": "https://soundcloud.com/",
-      "tags": ["🎧 Music", "📊 Statistics"]
+      "tags": ["🎧 Music", "📊 Statistics"],
+      "keywords": []
     },
     "Untappd": {
       "url": "https://untappd.com/",
-      "tags": ["🍺 Beer", "📊 Statistics"]
+      "tags": ["🍺 Beer", "📊 Statistics"],
+      "keywords": []
     },
     "Archive of Our Own": {
       "url": "https://archiveofourown.org/",
-      "tags": ["📚 Fanfiction", "🧑 SNS"]
+      "tags": ["📚 Fanfiction", "🧑 SNS"],
+      "keywords": []
     }
   }
   const { createApp } = Vue
@@ -168,7 +201,14 @@
     computed: {
       filteredBookmarks() {
         return Object.keys(this.bookmarks)
-          .filter(name => name.toLowerCase().includes(this.query.toLowerCase()))
+          .filter(name => {
+            const bookmark = this.bookmarks[name];
+            const nameMatches = name.toLowerCase().includes(this.query.toLowerCase());
+            const keywordsMatch = bookmark.keywords.some(keyword =>
+              keyword.toLowerCase().includes(this.query.toLowerCase())
+            );
+            return nameMatches || keywordsMatch;
+          })
           .reduce((obj, name) => {
             obj[name] = this.bookmarks[name]
             return obj
