--- a/bookmarks.html
+++ b/bookmarks.html
@@ -275,10 +275,20 @@
 
   body {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", sans-serif;
+    margin: 0;
   }
 
   .query-container {
-    padding: var(--space-m);
+    position: sticky;
+    top: 0;
+    box-shadow: 1px 1px 1px lightgray;
+    & input {
+      border: 0;
+    }
+
+    & input:focus {
+      outline: none;
+    }
   }
 
   .query-container:before {
@@ -287,12 +297,12 @@
     height: 16px;
     display: inline-block;
     position: absolute;
-    top: 36px;
-    left: 36px;
+    top: 12px;
+    left: 16px;
   }
 
   .query {
-    border-radius: 10px;
+    /* border-radius: 10px; */
     border: 1px solid lightgray;
     font-size: large;
     /* padding: var(--space-m); */
@@ -313,6 +323,7 @@
     background-color: #f8f8f8;
     vertical-align: top;
     width: calc(100% - 40px);
+    box-shadow: 3px 3px 5px whitesmoke;
   }
 
   .tag-name {
