Split bookmarks.html into HTML and JS files
Split `bookmarks.html` into separate HTML and JavaScript files.

* Remove the JavaScript code from `bookmarks.html`.
* Add a `<script>` tag in `bookmarks.html` to reference the new `app.js` file.
* Create a new `app.js` file containing the JavaScript code previously embedded in `bookmarks.html`.
* Ensure the Vue.js application logic is included in `app.js`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/yamagh/BookmarkPage?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -42,266 +42,6 @@
       </div>
     </div>
 
-    <script>
-      const bookmarks = {
-        ChatGPT: {
-          url: "https://chat.openai.com/chat",
-          tags: ["🧰 Tools"],
-          keywords: ["cg"],
-        },
-        Twitter: {
-          url: "https://mobile.twitter.com/home",
-          tags: ["🧑 SNS"],
-          keywords: ["tw"],
-        },
-        GitHub: {
-          url: "https://github.com/",
-          tags: ["👨‍💻 Development", "📦 Tools"],
-          keywords: ["gh"],
-        },
-        Google: {
-          url: "https://www.google.com/search?q=%s",
-          tags: ["🔍 Search", "🌍 Web"],
-          keywords: ["gg"],
-        },
-        Wikipedia: {
-          url: "https://www.wikipedia.org/",
-          tags: ["📚 Reference", "🌍 Web"],
-          keywords: ["wp"],
-        },
-        YouTube: {
-          url: "https://www.youtube.com/",
-          tags: ["📹 Video", "🎬 Entertainment"],
-          keywords: ["yt"],
-        },
-        Reddit: {
-          url: "https://www.reddit.com/",
-          tags: ["🗣️ Discussion", "🧑 SNS"],
-          keywords: ["rd"],
-        },
-        Amazon: {
-          url: "https://www.amazon.com/",
-          tags: ["🛍️ Shopping", "📦 Tools"],
-          keywords: ["amz"],
-        },
-        LinkedIn: {
-          url: "https://www.linkedin.com/",
-          tags: ["👨‍💼 Professional", "🧑 SNS"],
-          keywords: ["li"],
-        },
-        Netflix: {
-          url: "https://www.netflix.com/",
-          tags: ["🎥 Streaming", "🎬 Entertainment"],
-          keywords: ["nf"],
-        },
-        Dropbox: {
-          url: "https://www.dropbox.com/",
-          tags: ["💾 Storage", "📦 Tools"],
-          keywords: ["db"],
-        },
-        Pinterest: {
-          url: "https://www.pinterest.com/",
-          tags: ["📌 Inspiration", "🧑 SNS"],
-          keywords: ["pt"],
-        },
-        Slack: {
-          url: "https://slack.com/",
-          tags: ["💬 Communication", "👨‍💼 Professional"],
-          keywords: [],
-        },
-        Twitch: {
-          url: "https://www.twitch.tv/",
-          tags: ["🎮 Gaming", "🎬 Entertainment"],
-          keywords: ["tc"],
-        },
-        Zoom: {
-          url: "https://zoom.us/",
-          tags: ["👥 Meetings", "👨‍💼 Professional"],
-          keywords: [],
-        },
-        Discord: {
-          url: "https://discord.com/",
-          tags: ["💬 Communication", "🎮 Gaming"],
-          keywords: ["dd"],
-        },
-        "Google Drive": {
-          url: "https://www.google.com/drive/",
-          tags: ["💾 Storage", "📦 Tools"],
-          keywords: ["gd"],
-        },
-        Hulu: {
-          url: "https://www.hulu.com/",
-          tags: ["🎥 Streaming", "🎬 Entertainment"],
-          keywords: ["hl"],
-        },
-        Instagram: {
-          url: "https://www.instagram.com/",
-          tags: ["📷 Photos", "🧑 SNS"],
-          keywords: ["ig"],
-        },
-        Notion: {
-          url: "https://www.notion.so/",
-          tags: ["📝 Productivity", "📦 Tools"],
-          keywords: ["nt"],
-        },
-        Spotify: {
-          url: "https://www.spotify.com/",
-          tags: ["🎧 Music", "🎬 Entertainment"],
-          keywords: [],
-        },
-        TikTok: {
-          url: "https://www.tiktok.com/",
-          tags: ["📹 Short-form Video", "🧑 SNS"],
-          keywords: ["tt"],
-        },
-        Goodreads: {
-          url: "https://www.goodreads.com/",
-          tags: ["📚 Books", "📝 Productivity"],
-          keywords: [],
-        },
-        "Last.fm": {
-          url: "https://www.last.fm/",
-          tags: ["🎧 Music", "📊 Statistics"],
-          keywords: [],
-        },
-        Letterboxd: {
-          url: "https://letterboxd.com/",
-          tags: ["🎥 Movies", "📊 Statistics"],
-          keywords: [],
-        },
-        Meetup: {
-          url: "https://www.meetup.com/",
-          tags: ["👥 Community", "👨‍💼 Professional"],
-          keywords: [],
-        },
-        "New York Times": {
-          url: "https://www.nytimes.com/",
-          tags: ["📰 News", "📊 Statistics"],
-          keywords: [],
-        },
-        Replit: {
-          url: "https://replit.com/",
-          tags: ["💻 Programming", "📦 Tools"],
-          keywords: [],
-        },
-        SoundCloud: {
-          url: "https://soundcloud.com/",
-          tags: ["🎧 Music", "📊 Statistics"],
-          keywords: [],
-        },
-        Untappd: {
-          url: "https://untappd.com/",
-          tags: ["🍺 Beer", "📊 Statistics"],
-          keywords: [],
-        },
-        "Archive of Our Own": {
-          url: "https://archiveofourown.org/",
-          tags: ["📚 Fanfiction", "🧑 SNS"],
-          keywords: [],
-        },
-      };
-      const { createApp } = Vue;
-
-      createApp({
-        data() {
-          return {
-            query: "",
-            bookmarks,
-          };
-        },
-        mounted() {
-          this.$refs.query.focus();
-        },
-        computed: {
-          filteredBookmarks() {
-            const queryWords = this.query.toLowerCase().split(/\s+/);
-            return Object.entries(this.bookmarks).reduce(
-              (result, [name, bookmark]) => {
-                const nameMatches = queryWords.every((word) =>
-                  name.toLowerCase().includes(word)
-                );
-                const keywordMatches = queryWords.every((word) =>
-                  bookmark.keywords.some((keyword) =>
-                    keyword.toLowerCase().includes(word)
-                  )
-                );
-                if (nameMatches || keywordMatches) {
-                  result[name] = bookmark;
-                }
-                return result;
-              },
-              {}
-            );
-          },
-          groupedBookmarks() {
-            let groups = {};
-            for (let [name, bookmark] of Object.entries(
-              this.filteredBookmarks
-            )) {
-              for (let tag of bookmark.tags) {
-                if (!groups[tag]) {
-                  groups[tag] = {};
-                }
-                groups[tag][name] = bookmark;
-              }
-            }
-            return groups;
-          },
-          sortedGroupedBookmarks() {
-            const removeEmojis = (str) =>
-              str.replace(/[\u{1F000}-\u{1F6FF}]/gu, "");
-            const sortedGroups = Object.keys(this.groupedBookmarks).sort(
-              (a, b) => {
-                return removeEmojis(a).localeCompare(removeEmojis(b));
-              }
-            );
-            const sortedBookmarks = {};
-            for (let group of sortedGroups) {
-              sortedBookmarks[group] = Object.keys(this.groupedBookmarks[group])
-                .sort((a, b) => {
-                  return removeEmojis(a).localeCompare(removeEmojis(b));
-                })
-                .reduce((obj, key) => {
-                  obj[key] = this.groupedBookmarks[group][key];
-                  return obj;
-                }, {});
-            }
-            return sortedBookmarks;
-          },
-        },
-        methods: {
-          goToFirstBookmark() {
-            const sortedGroups = Object.keys(this.sortedGroupedBookmarks);
-            if (sortedGroups.length > 0) {
-              const group = this.sortedGroupedBookmarks[sortedGroups[0]];
-              const bookmarks = Object.values(group);
-              const bookmark = bookmarks[0];
-              if (bookmark.url.includes("%s")) {
-                this.promptForParameter(bookmark);
-              } else {
-                window.location.href = bookmark.url;
-              }
-            }
-          },
-          promptForParameter(bookmark) {
-            const parameter = prompt(`Enter a value for parameter:`);
-            if (parameter !== null) {
-              const url = bookmark.url.replace(
-                "%s",
-                encodeURIComponent(parameter)
-              );
-              window.location.href = url;
-            }
-          },
-          navigate(bookmark) {
-            if (bookmark.url.includes("%s")) {
-              this.promptForParameter(bookmark);
-            } else {
-              window.location.href = bookmark.url;
-            }
-          },
-        },
-      }).mount("#app");
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
