--- a/bookmarks.html
+++ b/bookmarks.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="app"></div>
     <script src="app.js"></script>
+    <script>
+      createApp();
+    </script>
   </body>
 </html>
