--- a/bookmarks.html
+++ b/bookmarks.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <script src="bookmarks.js"></script>
     <script src="app.js"></script>
     <script>
       BookmarkApp.createApp();
